--- a/Python_practice/Basics.ipynb
+++ b/Python_practice/Basics.ipynb
@@ -5,7 +5,8 @@
    "id": "db83b15a-e00d-4342-abae-8778e5098de5",
    "metadata": {},
    "source": [
-    "### print(dir(<_variable >))  ---> shows the avilable function applicable on the var"
+    "### print(dir(<_variable >))  ---> shows the avilable function applicable on the var\n",
+    "print(help(var))"
    ]
   },
   {
@@ -181,8 +182,139 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "id": "8c227495-48f8-482a-ba5c-55ea7cbbbc93",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1, 2, 3, 4, 5, 6]\n",
+    "even_nums = [x for x in a if x % 2 == 0]\n",
+    "print(even_nums)  # Output: [2, 4, 6]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08ac4ae4-a73d-4a5d-b3c7-4bb20cb7734a",
+   "metadata": {},
+   "source": [
+    "### lambda"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "41a1ba46-dbb9-4167-8c22-0c3bdc9e9654",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6, 8, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "\n",
+    "even_nums = list(filter(lambda x: x % 2 == 0, a))\n",
+    "print(even_nums)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "aa171274-ea74-422b-a3e9-62e3974b66d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1, 2, 3, 4, 5]\n",
+    "squared = list(map(lambda x: x ** 2, a))\n",
+    "print(squared)  # Output: [1, 4, 9, 16, 25]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "45f6fea4-876a-482a-8296-018c8d406e24",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "from functools import reduce\n",
+    "a = [1, 2, 3, 4, 5]\n",
+    "sum_all = reduce(lambda x, y: x + y, a)\n",
+    "print(sum_all)  # Output: 15\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "4a3bc00f-3171-4e64-9a1b-4b3d256a0c6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 'a'), (2, 'b'), (3, 'c')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1, 2, 3]\n",
+    "b = ['a', 'b', 'c']\n",
+    "zipped = list(zip(a, b))\n",
+    "print(zipped)  # Output: [(1, 'a'), (2, 'b'), (3, 'c')]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "0fea8c4e-9f65-4833-9ee0-5c01bf35e8e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 'apple'), (2, 'banana'), (3, 'cherry')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = ['apple', 'banana', 'cherry']\n",
+    "indexed = list(enumerate(a, start=1))\n",
+    "print(indexed)  # Output: [(1, 'apple'), (2, 'banana'), (3, 'cherry')]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "4bfd402b-625d-41ce-aa98-7d76f10d74ce",
+   "id": "588b9c2c-dcff-4c3f-8d4d-9f361206349c",
    "metadata": {},
    "outputs": [],
    "source": []
